fix:"medium width"

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <input type="hidden" value="1" id="hdnPlataforma" />
 
   <div class="montando-o-painel">
-    <div class="div">
+    <div class="container">
       <div class="overlap"><img class="group" src="img/group-581.svg" /></div>
+      
       <img class="img" src="img/group-580.svg" />
       <div class="text-wrapper">Aguarde...</div>
       <div class="text-wrapper-2">Estamos montando sua plataforma</div>
@@ -31,9 +32,6 @@
       </div>
       <div class="frame-4">
         <h4 id="task4" style="font-family: Poppins, Helvetica;">✓ Enviando dados por e-mail.</h4>
-      </div>
-       <div class="frame-5">
-        
       </div> 
       <div class="progress-bar">
         <div class="bar" id="progress-bar"></div>
@@ -68,7 +66,7 @@
         minutes = minutes < 10 ? "0" + minutes : minutes;
         seconds = seconds < 10 ? "0" + seconds : seconds;
 
-        display.textContent = minutes + ":" + seconds;
+       // display.textContent = minutes + ":" + seconds;
 
         if (--timer < 0) {
           timer = duration;
@@ -139,7 +137,5 @@
 
   updateProgressBar();
 </script>
-
 </body>
-
 </html>
